@@ -3,16 +3,19 @@ package com.meetkey.server.domain.match.service;
 import com.meetkey.server.domain.match.dto.*;
 import com.meetkey.server.domain.match.entity.RecommendationQueue;
 import com.meetkey.server.domain.match.enums.MatchType;
+import com.meetkey.server.domain.match.exception.MatchErrorStatus;
+import com.meetkey.server.domain.match.exception.MatchException;
 import com.meetkey.server.domain.match.repository.MatchRepository;
 import com.meetkey.server.domain.match.repository.RecommendationQueueRepository;
 import com.meetkey.server.domain.member.entity.Member;
+import com.meetkey.server.domain.member.entity.Preference;
 import com.meetkey.server.domain.member.entity.mapping.FromToId;
 import com.meetkey.server.domain.member.entity.mapping.MemberLike;
 import com.meetkey.server.domain.member.entity.mapping.MemberLocation;
+import com.meetkey.server.domain.member.enums.Membership;
 import com.meetkey.server.domain.member.repository.MemberLikeRepository;
 import com.meetkey.server.domain.member.repository.MemberLocationRepository;
 import com.meetkey.server.domain.member.repository.MemberRepository;
-import com.meetkey.server.domain.member.entity.Preference;
 import com.meetkey.server.domain.member.repository.PreferenceRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -39,17 +42,24 @@ public class MatchServiceImpl implements MatchService {
     private final PreferenceRepository preferenceRepository;
     private final RecommendationQueueRepository recommendationQueueRepository;
 
-    @Override
     @Transactional
-    public MatchListResDTO getRecommendations(Member member, RecommendationReqDTO request) {
+    @Override
+    public MatchListResDTO getRecommendations(Long memberId, RecommendationReqDTO request) {
+        Member member = getMember(memberId);
+
         // 0. 기존 큐 초기화 (필터 변경 시 반영을 위해)
         recommendationQueueRepository.deleteByMemberAndIsSwipedFalse(member);
 
         // 1. 금일 스와이프 횟수 확인 (일일 제한 10명)
-        LocalDateTime startOfDay = LocalDate.now().atStartOfDay();
-        LocalDateTime endOfDay = LocalDate.now().atTime(LocalTime.MAX);
-        long todaySwipes = memberLikeRepository.countByFromMemberAndCreatedAtBetween(member, startOfDay, endOfDay);
-        int remainingQuota = Math.max(0, 10 - (int) todaySwipes);
+        int remainingQuota;
+        if (member.getMembership() == Membership.PREMIUM) {
+            remainingQuota = 10; // 유료 회원은 제한 없음 (항상 10명 풀 요청 가능)
+        } else {
+            LocalDateTime startOfDay = LocalDate.now().atStartOfDay();
+            LocalDateTime endOfDay = LocalDate.now().atTime(LocalTime.MAX);
+            long todaySwipes = memberLikeRepository.countByFromMemberAndCreatedAtBetween(member, startOfDay, endOfDay);
+            remainingQuota = Math.max(0, 10 - (int) todaySwipes);
+        }
 
         // 2. 분기 처리: 일일 할당량 남음 vs 소진 (Recycle)
         if (remainingQuota > 0) {
@@ -67,9 +77,23 @@ public class MatchServiceImpl implements MatchService {
             Collections.shuffle(recycleMembers);
             List<Member> limitedRecycle = recycleMembers.stream().limit(10).toList();
 
-            // 여기서는 단순 조회로 반환
+            List<MemberLocation> recycleLocations = memberLocationRepository.findAllByMemberIn(limitedRecycle);
+            Map<Long, MemberLocation> recycleLocMap = recycleLocations.stream()
+                .collect(Collectors.toMap(loc -> loc.getMember().getId(), loc -> loc));
+
+            MemberLocation myLocation = memberLocationRepository.findByMember(member).orElse(null);
+
             List<RecommendationResDTO> dtos = limitedRecycle.stream()
-                .map(this::convertToDTO)
+                .map(target -> {
+                    Preference pref = preferenceRepository.findById(target.getId()).orElse(null);
+                    MemberLocation targetLoc = recycleLocMap.get(target.getId());
+                    double distance = 0.0;
+                    if (myLocation != null && targetLoc != null) {
+                        distance = calculateDistance(myLocation.getLatitude(), myLocation.getLongitude(),
+                            targetLoc.getLatitude(), targetLoc.getLongitude());
+                    }
+                    return convertToDTO(target, pref, distance);
+                })
                 .collect(Collectors.toList());
 
             return buildResponse(dtos, dtos.size(), MatchType.RECYCLE);
@@ -91,11 +115,33 @@ public class MatchServiceImpl implements MatchService {
         // 1. 기 스와이프 유저 제외
         List<Long> excludedIds = memberLikeRepository.findSwipedMemberIdsByMember(member);
 
+        // 1.5. 위치 정보 보정 (요청에 좌표 없고 DB에 있으면 DB 값 사용)
+        MemberLocation myLocation = memberLocationRepository.findByMember(member).orElse(null);
+        if (request.maxDistance() != null) {
+            if ((request.latitude() == null || request.longitude() == null) && myLocation == null) {
+                throw new MatchException(MatchErrorStatus.LOCATION_NOT_FOUND);
+            }
+
+            if (request.latitude() == null || request.longitude() == null) {
+                request = RecommendationReqDTO.builder()
+                    .interests(request.interests())
+                    .homeTown(request.homeTown())
+                    .nativeLanguage(request.nativeLanguage())
+                    .targetLanguage(request.targetLanguage())
+                    .targetLanguageLevel(request.targetLanguageLevel())
+                    .minAge(request.minAge())
+                    .maxAge(request.maxAge())
+                    .latitude(myLocation.getLatitude())
+                    .longitude(myLocation.getLongitude())
+                    .maxDistance(request.maxDistance())
+                    .build();
+            }
+        }
+
         // 2. 하드 필터 (QueryDSL)
         List<Member> candidates = matchRepository.findRecommendableMembers(member, request, excludedIds, 100);
 
         // 3. 소프트 스코어링 (점수 계산)
-        MemberLocation myLocation = memberLocationRepository.findByMember(member).orElse(null);
         Preference myPreference = preferenceRepository.findById(member.getId()).orElse(null);
 
         // 후보자들의 Preference 일괄 조회
@@ -104,10 +150,16 @@ public class MatchServiceImpl implements MatchService {
         Map<Long, Preference> prefMap = preferences.stream()
             .collect(Collectors.toMap(p -> p.getMember().getId(), p -> p));
 
+        // 후보자들의 Location 일괄 조회
+        List<MemberLocation> locations = memberLocationRepository.findAllByMemberIn(candidates);
+        Map<Long, MemberLocation> locMap = locations.stream()
+            .collect(Collectors.toMap(loc -> loc.getMember().getId(), loc -> loc));
+
         List<MemberScore> scoredCandidates = candidates.stream()
             .map(candidate -> {
                 Preference targetPref = prefMap.get(candidate.getId());
-                double score = calculateScore(member, myLocation, myPreference, candidate, targetPref);
+                MemberLocation targetLoc = locMap.get(candidate.getId());
+                double score = calculateScore(member, myLocation, myPreference, candidate, targetPref, targetLoc);
                 return new MemberScore(candidate, score);
             })
             .sorted((p1, p2) -> Double.compare(p2.score, p1.score))
@@ -117,7 +169,7 @@ public class MatchServiceImpl implements MatchService {
         // 10명 미만일 경우 랜덤 유저 백필 (엄격한 조건 적용)
         if (scoredCandidates.size() < limit) {
             int needed = limit - scoredCandidates.size();
-            List<Long> currentIds = scoredCandidates.stream().map(ms -> ms.member().getId()).collect(Collectors.toList());
+            List<Long> currentIds = scoredCandidates.stream().map(ms -> ms.member().getId()).toList();
             List<Long> allExcluded = new ArrayList<>(excludedIds);
             allExcluded.addAll(currentIds);
 
@@ -129,6 +181,11 @@ public class MatchServiceImpl implements MatchService {
                 // scoredCandidates.add(new MemberScore(rm, 0.0)); // 점수는 0
                 // DTO 변환 시 필요하므로, 일단 점수 매기는 로직에 넣지 말고 0으로 하고, DTO 변환 시 조회하도록 함.
                 scoredCandidates.add(new MemberScore(rm, 0.0));
+
+                // Location map에 없으면 추가 조회 필요할 수 있음
+                if (!locMap.containsKey(rm.getId())) {
+                    memberLocationRepository.findByMember(rm).ifPresent(loc -> locMap.put(rm.getId(), loc));
+                }
             });
         }
 
@@ -148,15 +205,26 @@ public class MatchServiceImpl implements MatchService {
         return scoredCandidates.stream()
             .map(ms -> {
                 // 백필된 멤버의 경우 prefMap에 없을 수 있음
-                Preference targetPref = prefMap.containsKey(ms.member().getId()) ? 
-                                        prefMap.get(ms.member().getId()) : 
-                                        preferenceRepository.findById(ms.member().getId()).orElse(null);
-                return convertToDTO(ms.member(), targetPref);
+                Preference targetPref = prefMap.containsKey(ms.member().getId()) ?
+                    prefMap.get(ms.member().getId()) :
+                    preferenceRepository.findById(ms.member().getId()).orElse(null);
+
+                MemberLocation targetLoc = locMap.containsKey(ms.member().getId()) ?
+                    locMap.get(ms.member().getId()) :
+                    memberLocationRepository.findByMember(ms.member()).orElse(null);
+
+                double distance = 0.0;
+                if (myLocation != null && targetLoc != null) {
+                    distance = calculateDistance(myLocation.getLatitude(), myLocation.getLongitude(),
+                        targetLoc.getLatitude(), targetLoc.getLongitude());
+                }
+
+                return convertToDTO(ms.member(), targetPref, distance);
             })
             .collect(Collectors.toList());
     }
 
-    private double calculateScore(Member me, MemberLocation myLoc, Preference myPref, Member target, Preference targetPref) {
+    private double calculateScore(Member me, MemberLocation myLoc, Preference myPref, Member target, Preference targetPref, MemberLocation targetLoc) {
         double score = 0;
 
         // 1. 언어 점수 (최대 +5점)
@@ -196,12 +264,9 @@ public class MatchServiceImpl implements MatchService {
         }
 
         // 거리 50km 이내 (+1점)
-        if (myLoc != null) {
-            MemberLocation targetLoc = memberLocationRepository.findByMember(target).orElse(null);
-            if (targetLoc != null) {
-                double dist = calculateDistance(myLoc.getLatitude(), myLoc.getLongitude(), targetLoc.getLatitude(), targetLoc.getLongitude());
-                if (dist <= 50.0) score += 1;
-            }
+        if (myLoc != null && targetLoc != null) {
+            double dist = calculateDistance(myLoc.getLatitude(), myLoc.getLongitude(), targetLoc.getLatitude(), targetLoc.getLongitude());
+            if (dist <= 50.0) score += 1;
         }
 
         return score;
@@ -215,16 +280,17 @@ public class MatchServiceImpl implements MatchService {
             Math.cos(Math.toRadians(lat1)) * Math.cos(Math.toRadians(lat2)) *
                 Math.sin(dLon / 2) * Math.sin(dLon / 2);
         double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-        return R * c;
+        double dist = R * c;
+        return Math.round(dist * 100) / 100.0;
     }
 
     private RecommendationResDTO convertToDTO(Member member) {
         // Recycle 모드 등 단일 조회 시 사용
         Preference pref = preferenceRepository.findById(member.getId()).orElse(null);
-        return convertToDTO(member, pref);
+        return convertToDTO(member, pref, 0.0);
     }
 
-    private RecommendationResDTO convertToDTO(Member member, Preference pref) {
+    private RecommendationResDTO convertToDTO(Member member, Preference pref, double distance) {
         int age = member.getBirthday() != null ? LocalDate.now().getYear() - member.getBirthday().getYear() + 1 : 0;
 
         RecommendationResDTO.PersonalityDTO personalityDTO = null;
@@ -248,7 +314,7 @@ public class MatchServiceImpl implements MatchService {
             .nickname(member.getName())
             .age(age)
             .hometown(member.getHomeTown())
-            .distance(0.0) // 위치 정보 로직 생략 (0.0 반환)
+            .distance(distance)
             .gender(member.getGender())
             .nativeLanguage(RecommendationResDTO.LanguageDTO.builder()
                 .language(member.getFirstLanguage())
@@ -267,9 +333,15 @@ public class MatchServiceImpl implements MatchService {
 
     @Override
     @Transactional
-    public SwipeResDTO swipe(Member member, SwipeReqDTO request) {
+    public SwipeResDTO swipe(Long memberId, SwipeReqDTO request) {
+        Member member = getMember(memberId);
+
+        if (member.getId().equals(request.targetMemberId())) {
+            throw new MatchException(MatchErrorStatus.SELF_SWIPE_NOT_ALLOWED);
+        }
+
         Member target = memberRepository.findById(request.targetMemberId())
-            .orElseThrow(() -> new IllegalArgumentException("Target member not found"));
+            .orElseThrow(() -> new MatchException(MatchErrorStatus.TARGET_MEMBER_NOT_FOUND));
 
         // 좋아요/싫어요 저장
         MemberLike memberLike = MemberLike.builder()
@@ -292,5 +364,10 @@ public class MatchServiceImpl implements MatchService {
     }
 
     private record MemberScore(Member member, double score) {
+    }
+
+    private Member getMember(Long memberId) {
+        return memberRepository.findById(memberId)
+            .orElseThrow(() -> new MatchException(MatchErrorStatus.MEMBER_NOT_FOUND));
     }
 }
